# shop_demo_be

./: Cargo.toml
migration/src/: lib.rs
migration/src/migrations/: admins.rs  coupons.rs  goods.rs  image_classes.rs  images.rs  mod.rs  notices.rs  roles.rs  rule_migration.rs  rules.rs  skus.rs  user_levels.rs  users.rs
src/: api_doc.rs  main.rs
src/api_docs/: index.rs
src/assets/: rule.json
src/entities/: admins.rs  coupons.rs  goods.rs  image_classes.rs  images.rs  mod.rs  notices.rs  prelude.rs  roles.rs  rules.rs  skus.rs  user_levels.rs  users.rs
src/entity/: rules.rs
src/handlers/: coupons.rs  goods.rs  image_classes.rs  images.rs  mod.rs  notices.rs  roles.rs  rule.rs  rules.rs  skus.rs  user_levels.rs  users.rs
src/handlers/admins/: mod.rs
src/handlers/rules/: mod.rs  utils.rs
src/models/: coupons.rs  goods.rs  image_classes.rs  images.rs  mod.rs  notices.rs  roles.rs  rules.rs  skus.rs  user_levels.rs  users.rs
src/models/admins/: mod.rs
src/routers/: coupons.rs  goods.rs  image_classes.rs  images.rs  mod.rs  notices.rs  roles.rs  rules.rs  skus.rs  user_levels.rs  users.rs
src/routers/admins/: manager.rs  mod.rs
src/utils/: json.rs  response.rs
