[package]
name = "shop_demo_be"
version = "0.1.0"
edition = "2021"

[workspace]
members = ['.', "migration"]

[dependencies]
migration = { path = "migration" }
actix-web = "4.9.0"
chrono = "0.4.40"
sea-orm = { version = "1.1.7", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
log = "0.4.26"
dotenv = "0.15.0"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
